fix : social links not refreshing in the footer on initial customization ( when nothing printed yet ) improved : footer credits made smaller. Now use the WordPress icon. fix : headings hidden on mobile when no header image displayed. Fixes #527.

--- a/assets/front/css/_parts/0_4_header.css
+++ b/assets/front/css/_parts/0_4_header.css
@@ -425,6 +425,8 @@ box-shadow: -1px 0 0 rgba(255,255,255,0.1); }
     width: 100%;
   }
   .header-mobile-sticky #header-image-wrap { padding-top: 50px; }
+  /* Fixes https://github.com/presscustomizr/hueman/issues/527 */
+  .header-mobile-sticky #wrapper .no-header-img { padding-bottom: 50px; }
 }
 /* STICKY MENU */
 @media only screen and (min-width: 720px) {
