--- a/assets/front/css/_parts/9_0_footer.css
+++ b/assets/front/css/_parts/9_0_footer.css
@@ -25,6 +25,7 @@
 #footer-bottom #footer-logo { display: block; margin-bottom: 20px; max-height: 50px; -webkit-border-radius: 0; border-radius: 0; }
 #footer-bottom #copyright,
 #footer-bottom #credit { color: #fff; color: rgba(255,255,255,0.5); font-size: 0.9375em; line-height: 1.5em; }
+#footer-bottom #credit p { font-size: 0.88em; padding-top: 0.5em;}
 #footer-bottom #back-to-top { background: #eaeaea; color: #777; overflow: hidden; text-align: center; width: 60px; height: 30px; display: block; margin: 0 auto; margin: 0 auto -30px;
 -webkit-border-radius: 0 0 3px 3px; border-radius: 0 0 3px 3px;
 -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.05);
