--- a/assets/front/css/dev-common.css
+++ b/assets/front/css/dev-common.css
@@ -1408,6 +1408,8 @@ box-shadow: -1px 0 0 rgba(255,255,255,0.1); }
     width: 100%;
   }
   .header-mobile-sticky #header-image-wrap { padding-top: 50px; }
+  /* Fixes https://github.com/presscustomizr/hueman/issues/527 */
+  .header-mobile-sticky #wrapper .no-header-img { padding-bottom: 50px; }
 }
 /* STICKY MENU */
 @media only screen and (min-width: 720px) {
@@ -2462,6 +2464,7 @@ svg.hu-svg-placeholder {
 #footer-bottom #footer-logo { display: block; margin-bottom: 20px; max-height: 50px; -webkit-border-radius: 0; border-radius: 0; }
 #footer-bottom #copyright,
 #footer-bottom #credit { color: #fff; color: rgba(255,255,255,0.5); font-size: 0.9375em; line-height: 1.5em; }
+#footer-bottom #credit p { font-size: 0.88em; padding-top: 0.5em;}
 #footer-bottom #back-to-top { background: #eaeaea; color: #777; overflow: hidden; text-align: center; width: 60px; height: 30px; display: block; margin: 0 auto; margin: 0 auto -30px;
 -webkit-border-radius: 0 0 3px 3px; border-radius: 0 0 3px 3px;
 -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.05);
